--- a/Chat/kursistChat.html
+++ b/Chat/kursistChat.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Chat</title>
-    <script src=""></script>
+    <link rel="stylesheet" href="kursistChat.css">
   </head>
   <body>
   </body>
