Opdateret Html med chat

--- a/Chat/kursistChat.html
+++ b/Chat/kursistChat.html
@@ -7,5 +7,12 @@
     <link rel="stylesheet" href="kursistChat.css">
   </head>
   <body>
+    <h1 id="KursistChat">Chat med din sprogmakker</h1>
+    
+    <p id="beskedFraSprogmakker">(Din sprogmakker har ikke sendt en besked endnu)</p><br>
+    <input placeholder="Send besked til sprogmakker" size="40">
+    <button id="sendBesked">Send</button><br><br>
+    <button id="tilbage">Gå tilbage</button>
+
   </body>
 </html>
