chat virker nu !

--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
     <script>
         $(function () {
           var socket = io();
+          var username = prompt('What\'s your username?');
+            socket.emit('new_client', username);
+            document.title = username + ' - ' + document.title;
+
           $('form').submit(function(){
             socket.emit('chat message', $('#m').val());
             $('#m').val('');
             return false;
           });
           socket.on('chat message', function(msg){
-            $('#messages').append($('<li>').text(msg));
+            $('#messages').append($('<li>').text(username+' : '+msg));
           });
         });
       </script> 
