usernames virker nu endelig.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             document.title = username + ' - ' + document.title;
 
           $('form').submit(function(){
-            socket.emit('chat message', $('#m').val());
+            socket.emit('chat message',username+' : '+ $('#m').val());
             $('#m').val('');
             return false;
           });
           socket.on('chat message', function(msg){
-            $('#messages').append($('<li>').text(username+' : '+msg));
+            $('#messages').append($('<li>').text(msg));
           });
         });
       </script> 
