--- a/menu/underviser/underviserside.html
+++ b/menu/underviser/underviserside.html
@@ -28,6 +28,7 @@
 
     <!--Knapper-->
     <div class="buttons">
+        <a href="../../Profil/Underviser.html"><button class="button1">Profil side</button></a>
         <a href="../../inspiration/spil/spilnavigation.html"><button class="button1">Start spillet</button></a>
         <a href="../../inspiration/baggrund/udfordring.html"><button class="button2"> Dagens opgaver</button></a>
         <!--Point-->
