--- a/Profil/Kursist.html
+++ b/Profil/Kursist.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kursist profil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="collectCookies.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+    <script src="../collectCookies.js"></script>
 </head>
-<body>
-    <script>tjekCookie();</script>
-    <h1 id="welcome_msg"></h1>
+<body onload="tjekCookie()">
+    <p id="welcome_msg"></p>
 </body>
 </html>
