Login - First commit

--- a/Profil/Kursist.html
+++ b/Profil/Kursist.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
     <script src="../collectCookies.js"></script>
 </head>
-<body onload="tjekCookie()">
+<body>
     <p id="welcome_msg"></p>
 </body>
 </html>
