--- a/Profil/sprogmakker/Sprogmakker.html
+++ b/Profil/sprogmakker/Sprogmakker.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Kursist profil</title>
+    <title>Sprogmakker profil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
-    <script src="../collectCookies.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../../css/style.css" />
+    <script src="main.js"></script>
 </head>
 <body>
-    <p id="welcome_msg"></p>
+    <h1>Sprogmakker</h1>
 </body>
 </html>
