--- a/menu/kursist/kursistside.html
+++ b/menu/kursist/kursistside.html
@@ -28,7 +28,7 @@
 
     <!--Knapper-->
     <div class="buttons">
-        <a href="../../Profil/Kursist.html"><button class="button1">Profil side</button></a>
+        <a href="../../Profil//kursist/Kursist.html"><button class="button1">Profil side</button></a>
         <a href="../../inspiration/spil/spilnavigation.html"><button class="button1">Start spillet</button></a>
         <a href="../../inspiration/baggrund/udfordring.html"><button class="button2"> Dagens opgaver</button></a>
         <!--Point-->
