--- a/menu/kursist/kursistside.html
+++ b/menu/kursist/kursistside.html
@@ -20,6 +20,8 @@
   <a href="../../inspiration/galleri.html"><img class="pictures" src="../../billeder/billeder.png" alt="flere billeder"></a>
   <!--Kamera knap-->
   <a href="../../inspiration/kamera/kamera.html"><img class="camera" src="../../billeder/camera.png" alt="Kamera"></a>
+  <!--Ordbog knap-->
+  <a href=""><img class="" src="" alt="Ordbog"></a>
 
 
  </header>
