--- a/login/Profil/kursist/Kursist.html
+++ b/login/Profil/kursist/Kursist.html
@@ -6,7 +6,7 @@
     <title>Kursist profil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../../css/style.css" />
-    <script src="../collectCookies.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <p id="welcome_msg">Kursist side</p>
