--- a/login/menu/kursist/kursistside.html
+++ b/login/menu/kursist/kursistside.html
@@ -22,6 +22,8 @@
   <a href="../../inspiration/kamera/kamera.html"><img class="camera" src="../../billeder/camera.png" alt="Kamera"></a>
   <!--Ordbog knap-->
   <a href=""><img class="" src="" alt="Ordbog"></a>
+  <!--Chat knap-->
+  <a href=""><img class="" src="" alt="Chat"></a>
 
 
  </header>
@@ -30,7 +32,7 @@
 
     <!--Knapper-->
     <div class="buttons">
-        <a href="../../Profil//kursist/Kursist.html"><button class="button1">Profil side</button></a>
+        <a href="../../Profil/kursist/Kursist.html"><button class="button1">Profil side</button></a>
         <a href="../../inspiration/spil/spilnavigation.html"><button class="button1">Start spillet</button></a>
         <a href="../../inspiration/baggrund/udfordring.html"><button class="button2"> Dagens opgaver</button></a>
         <!--Point-->
