--- a/Chatten/chatSide.html
+++ b/Chatten/chatSide.html
@@ -12,6 +12,7 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
       <select id="friendslist" onchange="vaeglVen()">
