Opret bruger og cookies rettelser.

--- a/login/Profil/kursist/Kursist.html
+++ b/login/Profil/kursist/Kursist.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <p id="welcome_msg">Kursist side</p>
+    <!--<script>hentCookie("brugernavn")</script>-->
+    <p id="welcome_msg">Personlig side</p>
 </body>
 </html>
