Refaktoreret design på login.html og brugerprofiler

--- a/login/inspiration/menuside.html
+++ b/login/inspiration/menuside.html
@@ -4,31 +4,28 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Underviserside</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <title>Menuside</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
+  
 <header>
-
-
-
   <!--Logo øverst oppe-->
-  <a href="../../Clientside/login.html"><img class="logoutmenu" src="../../billeder/logout.png" alt="logout"></a>
+  <a href="../Clientside/login.html"><img class="logoutmenu" src="../billeder/logout.png" alt="logout"></a>
   <!--Galleriknap-->
-  <a href="../../inspiration/galleri.html"><img class="picturesmenu" src="../../billeder/billeder.png" alt="flere billeder"></a>
+  <a href="../inspiration/galleri.html"><img class="picturesmenu" src="../billeder/billeder.png" alt="flere billeder"></a>
   <!--Kamera knap-->
-  <a href="../../inspiration/kamera/kamera.html"><img class="cameramenu" src="../../billeder/camera.png" alt="Kamera"></a>
-
-
+  <a href="../inspiration/kamera/kamera.html"><img class="cameramenu" src="../billeder/camera.png" alt="Kamera"></a>
  </header>
+
 
   <body>
 
     <!--Knapper-->
-      <div class="buttonsmenu">
-        <button class="button" onclick="location.href='http://localhost:5500/login/Profil/underviser/Underviser.html'">Min Profil</button>
+    <div class="buttonsmenu">
+      <button class="button">Min Profil</button>
       <button class="button">Min Ordbog</button>
       <button class="button">Chat</button>
 
