--- a/login/menu/sprogmakker/sprogmakkerside.html
+++ b/login/menu/sprogmakker/sprogmakkerside.html
@@ -15,26 +15,22 @@
 
 
   <!--Logo øverst oppe-->
-  <a href="../../Clientside/login.html"><img class="logout" src="../../billeder/logout.png" alt="logout"></a>
+  <a href="../../Clientside/login.html"><img class="logoutmenu" src="../../billeder/logout.png" alt="logout"></a>
   <!--Galleriknap-->
-  <a href="../../inspiration/galleri.html"><img class="pictures" src="../../billeder/billeder.png" alt="flere billeder"></a>
+  <a href="../../inspiration/galleri.html"><img class="picturesmenu" src="../../billeder/billeder.png" alt="flere billeder"></a>
   <!--Kamera knap-->
-  <a href="../../inspiration/kamera/kamera.html"><img class="camera" src="../../billeder/camera.png" alt="Kamera"></a>
+  <a href="../../inspiration/kamera/kamera.html"><img class="cameramenu" src="../../billeder/camera.png" alt="Kamera"></a>
 
 
  </header>
 
   <body>
 
-    <!--Knapper-->
-    <div class="buttons">
-        <a href="../../Profil/sprogmakker/Sprogmakker.html"><button class="button1">Profil side</button></a>
-        <a href="../../inspiration/spil/spilnavigation.html"><button class="button1">Start spillet</button></a>
-        <a href="../../inspiration/baggrund/udfordring.html"><button class="button2"> Dagens opgaver</button></a>
-        <!--Point-->
-        <h3>0</h3>
-        <!--Point knap-->
-        <a href="../../inspiration/score/fremskridt.html"><button class="button3">Se Score</button></a>
+ <!--Knapper-->
+ <div class="buttonsmenu">
+  <button class="button" onclick="location.href='http://localhost:5500/login/Profil/sprogmakker/Sprogmakker.html'">Min Profil</button>
+  <button class="button">Min Ordbog</button>
+  <button class="button">Chat</button>
 
     </div>
 
