Opret bruger er lavet med logik (ikke helt færdigt).

--- a/login/Clientside/login.html
+++ b/login/Clientside/login.html
@@ -25,7 +25,7 @@
            <button onclick="testLogin()">Log Ind</button>
                              
            <!--Knap til nyBruger siden-->
-            <a href="nyBruger.html"></a><button type="submit">Opret Ny bruger</button>
+            <button type="submit" onclick="location.href='http://localhost:5500/login/menu/opretBruger.html'">Opret Ny bruger</button>
           </div>
         </div>
 
