added nogle commits

--- a/login/Clientside/login.html
+++ b/login/Clientside/login.html
@@ -13,6 +13,7 @@
 
   <body>
 
+    <!--script for onclinck-->
     <script>
       //Denne funktion tjekker om brugernavn og kodeord er korrekte, og er et match til dem der står i databasen
 function testLogin(){
