--- a/login/menu/kursist/kursistside.html
+++ b/login/menu/kursist/kursistside.html
@@ -28,9 +28,18 @@
 
     <script>
      window.onload = function () {
-       console.log(document.cookie.split("="));
-       console.log(document.getElementById("welcome_msg").innerHTML)
-       document.getElementById("welcome_msg").innerHTML = document.cookie.split("=")[1]
+       var cookieDataArray = document.cookie.split("=");
+       var userDataObject = JSON.parse(cookieDataArray[1]);
+
+       //console.log(userDataObject);
+       //console.log(cookieDataArray);
+
+       document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.navn
+       
+
+       //console.log(document.cookie.split("="));
+       //console.log(document.getElementById("welcome_msg").innerHTML)
+       //document.getElementById("welcome_msg").innerHTML = document.cookie.split("=")[1]
      } 
     </script>
 
