--- a/login/menu/sprogmakker/sprogmakkerside.html
+++ b/login/menu/sprogmakker/sprogmakkerside.html
@@ -26,13 +26,24 @@
 
   <body>
 
-      <script>
-          window.onload = function () {
-            console.log(document.cookie.split("="));
-            console.log(document.getElementById("welcome_msg").innerHTML)
-            document.getElementById("welcome_msg").innerHTML = document.cookie.split("=")[1]
-          } 
-         </script>
+    <script>
+
+        window.onload = function () {
+       var cookieDataArray = document.cookie.split("=");
+       var userDataObject = JSON.parse(cookieDataArray[1]);
+
+       //console.log(userDataObject);
+       //console.log(cookieDataArray);
+
+       document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.navn
+       
+
+       //console.log(document.cookie.split("="));
+       //console.log(document.getElementById("welcome_msg").innerHTML)
+       //document.getElementById("welcome_msg").innerHTML = document.cookie.split("=")[1]
+     }
+          
+    </script>
 
  <!--Knapper-->
  <div class="buttonsmenu">
