--- a/Chatten/chatSide.html
+++ b/Chatten/chatSide.html
@@ -101,6 +101,7 @@
         }
       }
     };
+    console.log("yeet XD");
 
     xmlhttp.open("GET", "http://192.168.43.116:3000/getChats", true);
     xmlhttp.send();
