--- a/login/menu/kursist/kursistside.html
+++ b/login/menu/kursist/kursistside.html
@@ -34,7 +34,7 @@
        //console.log(userDataObject);
        //console.log(cookieDataArray);
 
-       document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.navn
+       document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.username
        
 
        //console.log(document.cookie.split("="));
