--- a/login/menu/underviser/underviserside.html
+++ b/login/menu/underviser/underviserside.html
@@ -35,7 +35,7 @@
        //console.log(userDataObject);
        //console.log(cookieDataArray);
 
-       document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.navn
+       document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.username
        
 
        //console.log(document.cookie.split("="));
