kode fixes i server.js, opretBruger.js og .html

--- a/login/menu/opretBruger.html
+++ b/login/menu/opretBruger.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
     <script src="../ModelControllerRoute/opretBruger.js"></script>
 </head>
-    <header>
         <!--Logo øverst oppe-->
-        <a href="../Clientside/login.html"><img class="logoutmenu" src="../billeder/logout.png" alt="logout">Fortryd</a>
-    </header>
+      <a href=""><img class="logoutmenu" src="../billeder/logout.png" alt="tilbage">Tilbage</a>
 <body>
 
     <div class="containerlogin">
