--- a/Chatten/cameraTest.html
+++ b/Chatten/cameraTest.html
@@ -15,30 +15,29 @@
 <p><label for="file" style="cursor: pointer;">📷</label></p>
 <p><img id="output" width="200" /></p>
 
+
+ <form id="BilledeUpload" action="" method="POST" enctype="multipart/form-data">
+  <input type="file" accept="image/*" name="file" ondblclick="gogogoogle()">
+  <button onclick="gogogoogle()">Submit</button>
+ </form>
 <script>
-var loadFile = function(event) {
-	var image = document.getElementById('output');
-	image.src = URL.createObjectURL(event.target.files[0]);
-};
-</script>
+function gogogoogle(){
+        let randomnummer = Math.floor(Math.random()*999999999)+1;      
+        var billedenavn = document.getElementById("BilledeUpload");
+        var url = "https://storage.googleapis.com/sprogappdat17easj/billeder/"+randomnummer
 
- <input type="file" accept="audio/*" capture id="recorder">
+        
+        billedenavn.action=url;
 
-
-          <audio id="player" controls></audio>
-
-
-<script>
-  var recorder = document.getElementById('recorder');
-  var player = document.getElementById('player');
-
-
-  recorder.addEventListener('change', function(e) {
-    var file = e.target.files[0];
-    // Do something with the audio file.
-    player.src =  URL.createObjectURL(file);
-  });
-
+        document.cookie="linket="+url;
+        //document.getElementById("BilledeUpload").reset();
+        console.log(findCookieBeskrivelse("linket"));
+        
+}
+function findCookieBeskrivelse(name) {
+  var match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
+  if (match) return match[2];
+}
 </script>
 </body>
 </html>
