--- a/Chatten/chatOverview.html
+++ b/Chatten/chatOverview.html
@@ -17,7 +17,7 @@
  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script>
     document.cookie = "hvemErJeg=Frank;"
-
+    document.cookie = "nubilled=https://sw0022.smartweb-static.com/upload_dir/shop/Soft12-Mat-lacquer-oak.jpg"
 
     //Henter ens Venneliste over Request
     var venneliste = [];  
