lavet css til selve chatten

--- a/Chatten/chatOverview.html
+++ b/Chatten/chatOverview.html
@@ -18,8 +18,8 @@
         margin-left: auto;
         margin-right: auto;
         width: 5%;
-        background-color: #FAB32A;
-        border-color:#FAB32A;
+        background-color: rgb(219, 151, 16);
+        border-color:rgb(219, 151, 16);
     }
     button:hover{
         background-color: rgb(167, 122, 32);
