--- a/Chatten/chatSide.html
+++ b/Chatten/chatSide.html
@@ -13,6 +13,7 @@
     }
     body {
       font: 13px Helvetica, Arial;
+      background-color: rgb(27, 77, 77);
     }
     form {
       background: #000;
@@ -20,6 +21,10 @@
       position: fixed;
       bottom: 0;
       width: 100%;
+    }
+    h1{
+      color:white;
+      text-align: center;
     }
     form input {
       border: 0;
@@ -29,9 +34,10 @@
     }
     form button {
       width: 9%;
-      background: rgb(130, 224, 255);
+      background: rgb(219, 151, 16);
       border: none;
       padding: 10px;
+      color: white;
     }
     #messages {
       list-style-type: none;
@@ -40,9 +46,10 @@
     }
     #messages li {
       padding: 5px 10px;
+      color:white;
     }
     #messages li:nth-child(odd) {
-      background: #eee;
+      background: rgb(19, 54, 54);
     }
     #smartKnap{
           width: 50px;
@@ -50,6 +57,7 @@
           height: 50px;
           position: absolute;
           bottom: 43px;
+          color: white;
           font-size: 15px;
 
           float: left;
@@ -60,7 +68,7 @@
 </head>
 
 <body>
-
+<h1>Sprogapp Chat</h1>
 
 
 
