--- a/Chatten/chatSide.html
+++ b/Chatten/chatSide.html
@@ -63,6 +63,10 @@
           float: left;
           
       }
+      table{
+        border: 2px solid black;
+        text-align:center;
+      }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -70,9 +74,9 @@
 <body>
 <h1>Sprogapp Chat</h1>
 
-
-
+<table>
   <ul id="messages"></ul>
+</table>
 
   <form action="">
     <input id="m" autocomplete="off" /><button>Send</button>
