Fixed routes til forskellige profiler

--- a/login/menu/opretBruger.html
+++ b/login/menu/opretBruger.html
@@ -9,7 +9,7 @@
     <script src="../ModelControllerRoute/opretBruger.js"></script>
 </head>
         <!--Logo øverst oppe-->
-      <a href=""><img class="logoutmenu" src="../billeder/logout.png" alt="tilbage">Tilbage</a>
+      <a href="http://localhost:3000"><img class="logoutmenu" src="../billeder/logout.png" alt="tilbage">Tilbage</a>
 <body>
 
     <div class="containerlogin">
