--- a/login/menu/underviser/underviserside.html
+++ b/login/menu/underviser/underviserside.html
@@ -15,7 +15,7 @@
 
 
   <!--Logo øverst oppe-->
-  <a href="../../Clientside/login.html"><img class="logoutmenu" src="../../billeder/logout.png" alt="logout"></a>
+  <a href="http://localhost:3000"><img class="logoutmenu" src="../../billeder/logout.png" alt="logout"></a>
   <!--Galleriknap-->
   <a href="../../inspiration/galleri.html"><img class="picturesmenu" src="../../billeder/billeder.png" alt="flere billeder"></a>
   <!--Kamera knap-->
@@ -48,7 +48,7 @@
     <!--Knapper-->
       <div class="buttonsmenu">
       <p id="welcome_msg">welcome placeholder</p>
-      <button class="button" onclick="location.href='http://127.0.0.1:5500/Profil/underviser/Underviser.html'">Min Profil</button>
+      <button class="button" onclick="location.href='http://localhost:3000/Underviser' /* + et ID */">Min Profil</button>
       <button class="button">Min Ordbog</button>
       <button class="button">Chat</button>
 
