Tilføjet input felt til opretBruger.html

--- a/login/menu/opretBruger.html
+++ b/login/menu/opretBruger.html
@@ -16,6 +16,7 @@
         <form method="POST" action="opretBruger/register">
             <input type="text" name="brugernavn" id="input_brugernavn" placeholder="Skriv brugernavn">
             <input type="password" name="kodeord" id="input_kodeord" placeholder="Skriv kodeord">
+            <input type="text" name="contact" id="input_contact" placeholder="Write your contact">
            
         <select class="roller" name="rolle"> 
             <option class="options" value="default" selected>Vælg en rolle...</option>
