--- a/Chatten/chatSide.html
+++ b/Chatten/chatSide.html
@@ -114,7 +114,7 @@ text-align: center;
         document.cookie="linket="+url;
         //document.getElementById("BilledeUpload").reset();
         console.log(findCookieBeskrivelse("linket"));
-        
+        return false;
 }
     
    function findCookieBeskrivelse(name) {
